Fixed bug in RetryOptionsConstructorRecipe